[package]
name = "fiat-ramps"
version = "1.0.0"
edition = "2018"
authors = ['Dastanbek Samatov']
description = "An offchain-worker pallet to communicate with EBICS services"
license = "GPL-3.0-or-later"

[dependencies]
lite-json = { git = "https://github.com/xlc/lite-json.git", branch ="master", default-features = false }
log = { version = "0.4.14", default-features = false }
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

# Substrate packages
frame-support = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
frame-system = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
sp-core = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
sp-keystore = { version = "0.9", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', optional = true }
sp-io = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
sp-runtime = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
sp-std = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }

[features]
default = ['std']
std = [
	'frame-support/std',
	'frame-system/std',
	'codec/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-io/std',
	'log/std',
	'lite-json/std',
	'sp-core/std',
	'sp-keystore'
]
