[package]
name = "treasury"
version = "1.0.0"
edition = "2018"
authors = ['Dastanbek Samatov']
description = "A simple Treasury pallet that holds transfers that are yet to be confirmed by bank"
license = "GPL-3.0-or-later"

[dependencies]
parity-scale-codec = { version = "2.2.0", features = ["derive"], default-features = false }
serde = "1.0"
log = { version = "0.4.14", default-features = false }

# Substrate packages
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-07" }
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-07" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-07" }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-07" }
pallet-balances = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-07" }

[dev-dependencies]
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-07" }
sp-io = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-07" }

[features]
default = ['std']
std = [
	'frame-support/std',
	'frame-system/std',
	'sp-runtime/std',
	'parity-scale-codec/std',
]
